--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
 .DS_Store
 solutions/custom-idp/Pipfile.lock
+/solutions/custom-idp/.aws-sam
+/solutions/custom-idp/src/handler_layer
+solutions/custom-idp/samconfig*
+solutions/custom-idp/mergedAD
