updated the AD template with more meaningful parameter names
updated the AD template with more meaningful parameter names

--- a/solutions/custom-idp/vpc-cfn.yaml
+++ b/solutions/custom-idp/vpc-cfn.yaml
@@ -1,4 +1,4 @@
-Description:  This template deploys a VPC, with a pair of public and private subnets spread
+Description:  This template deploys a VPC, with 1 public and 2 private subnets spread
   across two Availability Zones. It deploys an internet gateway, with a default
   route on the public subnets. It deploys a pair of NAT gateways (one in each AZ),
   and default routes for them in the private subnets.
