--- a/solutions/custom-idp/managed-ad-template.yaml
+++ b/solutions/custom-idp/managed-ad-template.yaml
@@ -1,61 +1,63 @@
 AWSTemplateFormatVersion: '2010-09-09'
-Description: 'AWS Managed Microsoft AD Stack'
+Description: 'This template deploys AWS Managed Microsoft AD Stack and a VPC with subnets'
 Parameters:
-  Name:
+  DirectoryDNSName:
+    Description: Microsoft ActiveDirectory DNS Name
     Type: String
     Default: corp.demoftp.com
-  Password:
+  DirectoryAdminPassword:
+    Description: Microsoft ActiveDirectory Administrator Password
     Type: String
-    MinLength: 8
+    MinLength: 5
     MaxLength: 20
     NoEcho: true
-  ShortName:
+  DirectoryBIOSName:
+    Description: Microsoft ActiveDirectory BIOS Name
     Type: String
     Default: corp
-    MinLength: 8
+    MinLength: 3
     MaxLength: 20
 Resources:
   VpcStack:
       Type: 'AWS::CloudFormation::Stack'
       DeletionPolicy: Delete
       Properties:
-        TemplateURL: >-
-          https://raw.githubusercontent.com/aws-samples/toolkit-for-aws-transfer-family/main/solutions/custom-idp/vpc-cfn.yaml
+        TemplateURL: ./vpc-cfn.yaml
         Parameters:
           EnvironmentName: !Ref AWS::StackName
   ManagedAD: 
     Type: AWS::DirectoryService::MicrosoftAD
     Properties: 
-      Name: !Ref Name
-      Password: !Ref Password
-      ShortName: !Ref ShortName
+      Name: !Ref DirectoryDNSName
+      Password: !Ref DirectoryAdminPassword
+      ShortName: !Ref DirectoryBIOSName
       Edition: Standard
       CreateAlias: true
       VpcSettings: 
         SubnetIds: 
-          !Ref VpcStack.Outputs.PrivateSubnets
+          !GetAtt VpcStack.Outputs.PrivateSubnets
         VpcId: 
-          !Ref VpcStack.Outputs.VPC
+          !GetAtt VpcStack.Outputs.VPC
 
 Outputs:
   DirectoryID:
     Description: ID of the MS Directory
     Value: !Ref ManagedAD
   PrimaryDNS:
-    Description: DNS IPs of the MS Directory
+    Description: Primary DNS IPs of the MS Directory
     Value: !Select [ '0', !GetAtt ManagedAD.DnsIpAddresses ]
   SecondaryDNS:
-    Description: DNS IPs of the MSDirectory
+    Description: Secondary DNS IPs of the MSDirectory
     Value: !Select [ '1', !GetAtt ManagedAD.DnsIpAddresses ]
   DirectoryAlias:
-    Description: URL for the alias
+    Description: AD alias
     Value: !GetAtt ManagedAD.Alias
   VpcId:
     Description: Vpc Id
     Value: !GetAtt VpcStack.Outputs.VPC
-  SubnetPrivateSubnets:
-    Description: Private Subnets
+  PrivateSubnets:
+    Description: Private Subnets created
     Value: !GetAtt VpcStack.Outputs.PrivateSubnets
-  SubnetPublicSubnets:
-    Description: Public Subnets
+  PublicSubnets:
+    Description: Public Subnets created
     Value: !GetAtt VpcStack.Outputs.PublicSubnets
