moved the AD to examples directory
moved the AD to examples directory

--- a/solutions/custom-idp/examples/activedirectory/managed-ad-template.yaml
+++ b/solutions/custom-idp/examples/activedirectory/managed-ad-template.yaml
@@ -35,7 +35,7 @@ Resources:
       CreateAlias: true
       VpcSettings: 
         SubnetIds: 
-          !GetAtt VpcStack.Outputs.PrivateSubnets
+          !Split [',', !GetAtt VpcStack.Outputs.PrivateSubnets ]
         VpcId: 
           !GetAtt VpcStack.Outputs.VPC
 
