--- a/solutions/custom-idp/pipeline/buildspec_build_deploy.yml
+++ b/solutions/custom-idp/pipeline/buildspec_build_deploy.yml
@@ -9,21 +9,23 @@ phases:
   build:
     commands:
       - cd "${PROJECT_SUBFOLDER}"
+      - pwd
       - ARTIFACTS_DIR="${PROJECT_SUBFOLDER}/src/handler_layer"
+      - echo "${ARTIFACTS_DIR}"
       - python3 -m pip install pipenv
       - pipenv lock 
-      - mkdir -p "$ARTIFACTS_DIR"   
-      - rm -rf  "$ARTIFACTS_DIR/python"
-      - mkdir -p "$ARTIFACTS_DIR/python"    
-      - pipenv requirements > "$ARTIFACTS_DIR/requirements.txt"
-      - python3 -m pip install -r "$ARTIFACTS_DIR/requirements.txt" -t "$ARTIFACTS_DIR/python"      
-      - sam build  --template "custom-idp.yaml"
-      - sam deploy  --stack-name "${STACK_NAME}"
-                  --s3-bucket "${ARTIFACTS_BUCKET}"
-                  --s3-prefix sam-artifacts/
-                  --capabilities "CAPABILITY_NAMED_IAM"
-                  --role-arn "${ENV_CLOUDFORMATION_EXECUTION_ROLE}"
-                  --no-confirm-changeset
-                  --parameter-overrides "Subnets=\"${Subnets}\" SecurityGroups=\"${SecurityGroups}\" SecretsManagerPermissions=\"${SecretsManagerPermissions}\" UserNameDelimiter=\"${UserNameDelimiter}\" LogLevel=\"${LogLevel}\" ProvisionApi=\"${ProvisionApi}\" EnableTracing=\"${EnableTracing}\" UsersTableName=\"${UsersTable}\" IdentityProvidersTableName=\"${IdentityProvidersTable}\""
+      - mkdir -p "${ARTIFACTS_DIR}"   
+      - rm -rf  "${ARTIFACTS_DIR}/python"
+      - mkdir -p "${ARTIFACTS_DIR}/python"    
+      - pipenv requirements > "$}ARTIFACTS_DIR}/requirements.txt"
+      - python3 -m pip install -r "${ARTIFACTS_DIR}/requirements.txt" -t "{$ARTIFACTS_DIR}/python"    
+      - sam build --template "custom-idp.yaml"
+      - sam deploy  --stack-name "${StackName}"
+                    --s3-bucket "${ARTIFACTS_BUCKET}"
+                    --s3-prefix sam-artifacts/
+                    --capabilities "CAPABILITY_NAMED_IAM"
+                    --role-arn "${CLOUDFORMATION_EXECUTION_ROLE}"
+                    --no-confirm-changeset
+                    --parameter-overrides "Subnets=\"${Subnets}\" SecurityGroups=\"${SecurityGroups}\" SecretsManagerPermissions=\"${SecretsManagerPermissions}\" UserNameDelimiter=\"${UserNameDelimiter}\" LogLevel=\"${LogLevel}\" ProvisionApi=\"${ProvisionApi}\" EnableTracing=\"${EnableTracing}\" UsersTableName=\"${UsersTable}\" IdentityProvidersTableName=\"${IdentityProvidersTable}\""
 
 
